init 0.12 and misc corrections